--- a/my_files/isolinux/txt.cfg
+++ b/my_files/isolinux/txt.cfg
@@ -1,5 +1,11 @@
 default kmg
+
 label kmg
+  menu label ^KMG - Install Ubuntu Server
+  kernel /install/vmlinuz
+  append  file=/cdrom/preseed/ubuntu-server.seed initrd=/install/initrd.gz auto=true priority=high preseed/file=/cdrom/kmg-ks.preseed preseed/file/checksum=XXX_PRESEED_CHECKSUM_XXX -- net.ifnames=0 biosdevname=0
+
+label kmg_old
   menu label ^KMG - Install Ubuntu Server
   kernel /install/vmlinuz
   append  file=/cdrom/preseed/ubuntu-server.seed initrd=/install/initrd.gz ks=cdrom:/kmg-ks.cfg preseed/file=/cdrom/kmg-ks.preseed -- net.ifnames=0 biosdevname=0
